# raytracerWk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  camera.cpp  camera.hh  entities.cpp  entities.hh  material.cpp  material.hh  ppm.cpp  ppm.hh  ray.cpp  ray.hh  simpleRender.cpp  simpleRender.hh  sphere.cpp  sphere.hh  vec3.cpp  vec3.hh
src/exam1/: CMakeLists.txt  README.md  take2_math.hh  test_render.cpp  test_render_take2.cpp  test_render_take2_math.cpp
src/exam2/: test_render_take2_math.cpp
src/exam3/: README.md
src/wk1/: CMakeLists.txt  README.md  camera.cpp  camera.hh  entities.cpp  entities.hh  material.cpp  material.hh  ppm.cpp  ppm.hh  ray.cpp  ray.hh  simpleRender.cpp  simpleRender.hh  vec3.cpp  vec3.hh
src/wk1/exam1/: CMakeLists.txt  README.md  test_render.cpp  test_render_take2.cpp
src/wk1/exam2/: CMakeLists.txt  README.md  exam2lib.hh  lookdev.cpp  take2_math.hh  test_render_take2.cpp
tests/: CMakeLists.txt
tests/chapter1/: CMakeLists.txt  test_ppm.cpp  test_ppm.sh
tests/chapter10/: CMakeLists.txt  test_poscamera.cpp
tests/chapter11/: CMakeLists.txt  test_depth_of_field.cpp
tests/chapter2/: CMakeLists.txt  test_vector3.cpp
tests/chapter3/: CMakeLists.txt  test_ray.cpp
tests/chapter4/: CMakeLists.txt  test_sphere.cpp
tests/chapter5/: CMakeLists.txt  test_entity.cpp  test_entity_multi_spheres.cpp  test_entity_single_sphere.cpp  test_surface_normal.cpp
tests/chapter6/: CMakeLists.txt  test_AA.cpp
tests/chapter7/: CMakeLists.txt  test_diffuse.cpp
tests/chapter8/: CMakeLists.txt  test_material.cpp  test_metal.cpp
tests/chapter9/: CMakeLists.txt  test_dielectrics.cpp
tests/image/: test_ppm.cpp
tests/wk1/: CMakeLists.txt
tests/wk1/chapter1/: CMakeLists.txt  test_ppm.cpp
tests/wk1/chapter10/: CMakeLists.txt  test_poscamera.cpp
tests/wk1/chapter11/: CMakeLists.txt  test_depth_of_field.cpp
tests/wk1/chapter2/: CMakeLists.txt  test_vector3.cpp
tests/wk1/chapter3/: CMakeLists.txt  test_ray.cpp
tests/wk1/chapter4/: CMakeLists.txt  test_sphere.cpp
tests/wk1/chapter5/: CMakeLists.txt  test_entity_multi_spheres.cpp  test_entity_single_sphere.cpp  test_surface_normal.cpp
tests/wk1/chapter6/: CMakeLists.txt  test_AA.cpp
tests/wk1/chapter7/: CMakeLists.txt  test_diffuse.cpp
tests/wk1/chapter8/: CMakeLists.txt  test_material.cpp
tests/wk1/chapter9/: CMakeLists.txt  test_dielectrics.cpp
tests/wk1/exam2/: CMakeLists.txt
